Fixes: NB#229209 - CommonEditorInputField styles have too large left margin. (excluding label)
RevBy: TrustMe

--- a/base/meegotouch/libmeegotouchviews/style/commonlayouts/commonsheetstyle.css
+++ b/base/meegotouch/libmeegotouchviews/style/commonlayouts/commonsheetstyle.css
@@ -242,7 +242,7 @@ MTextEditStyle#CommonEditorInputField {
     margin-right: 0;
     padding-top: 15;
     padding-bottom: 11;
-    padding-left: $INDENT_DEFAULT;
+    padding-left: $PADDING_LARGE;
     padding-right: $INDENT_DEFAULT;
 }
 
@@ -255,7 +255,7 @@ MLabelStyle#CommonEditorInputFieldValue {
     margin-top: 15;
     margin-bottom: 11;
     margin-right: 0;
-    margin-left: $INDENT_DEFAULT;
+    margin-left: $MARGIN_LARGE;
     vertical-alignment: top;
 }
 
@@ -264,7 +264,7 @@ MLabelStyle#CommonEditorComboBoxSubTitle {
     margin-top: 12;
     margin-bottom: 11;
     margin-right: 0;
-    margin-left: $INDENT_DEFAULT;
+    margin-left: $MARGIN_LARGE;
     vertical-alignment: top;
 }
 
